# TetRex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci_macos.yml
bash_scripts/: discovery_modeling.sh  extract_prosite_patterns.sh
data/: prosite_patterns.csv
data/PATTERNS/: prosite_patterns.tsv
data/RESULTS/: DNA_Simulated_Benchmarks.csv  swissprot_benchmarks_corrected.tsv
data/dna_example_split/: sequence1.fa  sequence2.fa  sequence3.fa  sequence4.fa  sequence5.fa
doc/: CMakeLists.txt
include/: antibody_utils.h  arg_parse.h  construct_nfa.h  construct_reduced_nfa.h  construction_tools.h  custom_queue.h  dGramIndex.h  exhaustive.h  graphMaker.h  index.h  index_base.h  index_hibf.h  index_ibf.h  index_includes.h  inspect_idx.h  knfa_collector.h  korotkov_nfa.h  mash.h  molecule_decomposer.h  molecule_encodings.h  nfa_pointer.h  nucleotide_decomposer.h  otf_collector.h  parse_anarci.h  peptide_decomposer.h  query.h  utils.h
src/: CMakeLists.txt  antibody_utils.cpp  construct_nfa.cpp  construct_reduced_nfa.cpp  construction_tools.cpp  dGramIndex.cpp  graphMaker.cpp  index.cpp  index_base.cpp  inspect_idx.cpp  knfa_collector.cpp  korotkov_nfa.cpp  main.cpp  mash.cpp  molecule_encodings.cpp  nfa_pointer.cpp  otf_collector.cpp  query.cpp  utils.cpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt  convert_fastq_test.cpp
test/cli/: CMakeLists.txt  fastq_to_fasta_options_test.cpp  kbioreg_test.cpp
test/coverage/: CMakeLists.txt
test/data/: datasources.cmake  file1.fa  file2.fa  ibf_idx.ibf
utils/: analysis_lib.py  tetrex_tools  tetrex_tools.py  toolkit.py  visualization_eval.ipynb
